Proof-of-concept for new settings UI.

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -80,6 +80,12 @@ if (HAVE_QT)
                             InstallSceneryDialog.ui
                             EditCustomMPServerDialog.ui
                             UpdateAllAircraft.ui
+                            RenderingSettings.ui
+                            ViewSettings.ui
+                            MPSettings.ui
+                            DownloadSettings.ui
+                            EnvironmentPage.ui
+                            AdditionalSettings.ui
                             )
     qt5_add_resources(qrc_sources resources.qrc)
 
@@ -119,6 +125,24 @@ if (HAVE_QT)
                             EditCustomMPServerDialog.hxx
                             previewwindow.cpp
                             previewwindow.h
+                            SettingsSection.cpp
+                            SettingsSection.h
+                            renderingsettings.cpp
+                            renderingsettings.h
+                            ViewSettings.cpp
+                            ViewSettings.h
+                            MPSettings.cpp
+                            MPSettings.h
+                            AdvancedSettingsButton.h
+                            AdvancedSettingsButton.cpp
+                            DownloadSettings.cpp
+                            DownloadSettings.h
+                            ToolboxButton.cpp
+                            ToolboxButton.h
+                            EnvironmentPage.cpp
+                            EnvironmentPage.h
+                            AdditionalSettings.cpp
+                            AdditionalSettings.h
                             ${uic_sources}
                             ${qrc_sources})
 
