Move FGQCanvas install command
This keeps standalone FGQCanvas build working.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -37,4 +37,7 @@ endif()
 
 if (ENABLE_FGQCANVAS)
   add_subdirectory(fgqcanvas)
+
+  # do this here so standalone build of FGQCanvas works
+  install(TARGETS fgqcanvas RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 endif()
