Move some Launcher helpers into their own files.
Suggested be Sebastian, and it’s a good idea indeed, the main
launcher file has grown slightly.

--- a/src/GUI/CMakeLists.txt
+++ b/src/GUI/CMakeLists.txt
@@ -143,6 +143,10 @@ if (HAVE_QT)
                             EnvironmentPage.h
                             AdditionalSettings.cpp
                             AdditionalSettings.h
+                            LauncherArgumentTokenizer.cxx
+                            LauncherArgumentTokenizer.hxx
+                            AircraftSearchFilterModel.cxx
+                            AircraftSearchFilterModel.hxx
                             ${uic_sources}
                             ${qrc_sources})
 
