Partial testing framework.
Compile a useful subset of FG as a shared library, and add two basic
uses of this to exercise some Flightplan / RoutePath / navaid
functions.

The test framework can/will be expanded incrementally from here, this
is just a starting point.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -512,6 +512,22 @@ add_subdirectory(utils)
 add_subdirectory(src)
 add_subdirectory(man)
 
+if(ENABLE_TESTS)
+    # enable CTest / make test target
+    message(STATUS "Tests: ENABLED")
+
+    include (Dart)
+    enable_testing()
+    if(WIN32)
+      # tests disabled until shared library export is fixed on Windows
+      message(STATUS "Tests disabled on Windows for the moment")
+    else()
+      add_subdirectory(tests)
+    endif()
+else()
+    message(STATUS "Tests: DISABLED")
+endif(ENABLE_TESTS)
+
 #-----------------------------------------------------------------------------
 ### uninstall target
 #-----------------------------------------------------------------------------
