--- a/src/Include/config_cmake.h.in
+++ b/src/Include/config_cmake.h.in
@@ -33,6 +33,7 @@
 #cmakedefine ENABLE_JSBSIM
 
 #define PKGLIBDIR "@FG_DATA_DIR@"
+#define FGSRCDIR "@PROJECT_SOURCE_DIR@"
 #define WEB_BROWSER "@WEB_BROWSER@"
 
 // Ensure FG_HAVE_xxx always have a value
