Test helper CMake macro.
Also build the test code first, so tests can reside in source tree as
well as the test tree.

Finally, build local Sqlite with -fpic to give consistent linkage when
using either built-in or system sqlite.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -94,16 +94,16 @@ if(FG_HAVE_GPERFTOOLS)
     include_directories(${GooglePerfTools_INCLUDE_DIR})
     target_link_libraries(fgtestlib ${GooglePerfTools_LIBRARIES})
 endif()
-target_link_libraries(fgtestlib SimGearCore ${PLATFORM_LIBS})
+target_link_libraries(fgtestlib SimGearCore ${PLATFORM_LIBS} ${SQLITE3_LIBRARY})
 
 add_executable(fgtest fgTestDriver.cxx)
 target_link_libraries(fgtest fgtestlib)
 
-# repeat this section for each unit-test executable
-add_executable(testnavs test_navaids2.cxx)
-target_link_libraries(testnavs fgtestlib ${SQLITE3_LIBRARY})
-add_test(testnavs ${EXECUTABLE_OUTPUT_PATH}/testnavs)
+macro(flightgear_test name sources)
+  add_executable(${name} ${sources})
+  target_link_libraries(${name} fgtestlib)
+  add_test(${name} ${EXECUTABLE_OUTPUT_PATH}/${name})
+endmacro()
 
-add_executable(testflightplan test_flightplan.cxx)
-target_link_libraries(testflightplan fgtestlib ${SQLITE3_LIBRARY})
-add_test(testflightplan ${EXECUTABLE_OUTPUT_PATH}/testflightplan)
+flightgear_test(test_navs test_navaids2.cxx)
+flightgear_test(test_flightplan test_flightplan.cxx)
