Fix build on Windows.

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -185,6 +185,6 @@ if(ENABLE_METAR)
     install(TARGETS metar RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
 endif()
 
-if (ENABLE_TESTS)
+if (COMMAND flightgear_test)
 	flightgear_test(posinit test_posinit.cxx)
 endif()
