Migrate old autosave XML files. (Disabled for now)
Code and tests to demonstrate migrating of older auto-save files, with
blacklisting support to exclude properties. Disabled pending agreement
on the required blacklisting values.

--- a/src/Main/CMakeLists.txt
+++ b/src/Main/CMakeLists.txt
@@ -187,4 +187,5 @@ endif()
 
 if (COMMAND flightgear_test)
 	flightgear_test(posinit test_posinit.cxx)
+	flightgear_test(autosaveMigration test_autosaveMigration.cxx)
 endif()
