--- a/package/org.flightgear.FlightGear.desktop
+++ b/package/org.flightgear.FlightGear.desktop
@@ -2,6 +2,7 @@
 Version=1.1
 Name=FlightGear
 GenericName=Flight Simulator
+GenericName[fr]=Simulateur de vol
 Comment=Practice flight training (airplanes, helicopters...)
 Comment[de]=Fliegen üben (Flugzeuge, Helikopter...)
 Comment[fr]=S’entraîner au pilotage (avions, hélicoptères...)
@@ -14,9 +15,9 @@ Icon=flightgear
 Terminal=false
 Type=Application
 Categories=Game;Simulation
-Keywords=aviation;pilot;piloting;aeronautics;simulation;aircraft;airplane;seaplane;sailplane;glider;helicopter;airship;gas balloon;parachute;paraglider;hang-glider;spacecraft;rocket;space shuttle
+Keywords=aviation;pilot;piloting;simulation;aeronautics;aircraft;airplane;seaplane;sailplane;glider;helicopter;airship;gas balloon;parachute;paraglider;hang-glider;spacecraft;rocket;space shuttle
 Keywords[de]=Simulation;Luftfahrzeug;Flugzeug;Wasserflugzeug;Segelflugzeug;Gleiter;Helikopter;Luftschiff;Gasballon;Heißluftballon;Fallschirm;Gleitschirm;Hängegleiter;Raumfahrzeug;Rakete;Space Shuttle
-Keywords[fr]=aviation;vol;pilote;pilotage;simulation;simulateur;aéronautique;aéronef;avion;hydravion;planeur;hélicoptère;ballon dirigeable;montgolfière;parachute;parapente;deltaplane;véhicule spatial;fusée;navette spatiale
+Keywords[fr]=aviation;pilote;pilotage;simulation;aéronautique;aéronef;avion;hydravion;planeur;hélicoptère;ballon dirigeable;montgolfière;parachute;parapente;deltaplane;véhicule spatial;fusée;navette spatiale
 Keywords[it]=simulazione;aeromobile;aereo;idrovolante;aliante;elicottero;dirigibile;mongolfiera;paracadute;parapendio;deltaplano;astronave;razzo;space shuttle
 Keywords[nl]=simulatie;luchtvaartuig;vliegtuig;watervliegtuig;zweefvliegtuig;helikopter;luchtschip;luchtballon;valscherm;glijscherm;deltavlieger;ruimteschip;raket;ruimteveer
 Keywords[pt]=simulação;aeronave;avião;helicóptero;dirigível;balão;paraquedas;parapente;asa-delta;espaçonave;foguete;vaivém espacial
