Add and improve translations in package/org.flightgear.FlightGear.desktop
Thanks to Chris Blues, Thorsten Renk, Alessandro Menti,
Andrius Štikonas, Erik Hofman, Chimpa Theist, Emilian Huminiuc
and 梁思地 (Sidi Liang) for their translation work (sorted by
locale name!).

--- a/package/org.flightgear.FlightGear.desktop
+++ b/package/org.flightgear.FlightGear.desktop
@@ -1,25 +1,36 @@
 [Desktop Entry]
 Version=1.1
 Name=FlightGear
-GenericName=Flight Simulator
+GenericName=Flight simulator
+GenericName[de]=Flugsimulator
 GenericName[fr]=Simulateur de vol
+GenericName[it]=Simulatore di volo
+GenericName[lt]=Skrydžių simuliatorius
+GenericName[nl]=Vluchtsimulator
+GenericName[pt]=Simulador de Voo
+GenericName[ro]=Simulator de zbor
+GenericName[zh]=模拟飞行
 Comment=Practice flight training (airplanes, helicopters...)
 Comment[de]=Fliegen üben (Flugzeuge, Helikopter...)
 Comment[fr]=S’entraîner au pilotage (avions, hélicoptères...)
 Comment[it]=Addestrati al volo (aerei, elicotteri...)
+Comment[lt]=Treniruokitės skrydžius (lėktuvais, sraigtasparniais...)
 Comment[nl]=Beoefen Vlieglessen (vliegtuigen, helikopters...)
 Comment[pt]=Treinar pilotagem
 Comment[ro]=Exersarea pilotajului (avioane, elicoptere...)
+Comment[zh]=飞行训练 (固定翼飞机、直升飞机......)
 Exec=fgfs --launcher
 Icon=flightgear
 Terminal=false
 Type=Application
 Categories=Game;Simulation
 Keywords=aviation;pilot;piloting;simulation;aeronautics;aircraft;airplane;seaplane;sailplane;glider;helicopter;airship;gas balloon;parachute;paraglider;hang-glider;spacecraft;rocket;space shuttle
-Keywords[de]=Simulation;Luftfahrzeug;Flugzeug;Wasserflugzeug;Segelflugzeug;Gleiter;Helikopter;Luftschiff;Gasballon;Heißluftballon;Fallschirm;Gleitschirm;Hängegleiter;Raumfahrzeug;Rakete;Space Shuttle
+Keywords[de]=Luftfahrt;Pilot;Fliegen;Simulation;Aeronautik;Luftfahrzeug;Flugzeug;Wasserflugzeug;Segelflugzeug;Gleiter;Helikopter;Luftschiff;Gasballon;Heißluftballon;Fallschirm;Gleitschirm;Hängegleiter;Raumfahrzeug;Rakete;Space Shuttle
 Keywords[fr]=aviation;pilote;pilotage;simulation;aéronautique;aéronef;avion;hydravion;planeur;hélicoptère;ballon dirigeable;montgolfière;parachute;parapente;deltaplane;véhicule spatial;fusée;navette spatiale
-Keywords[it]=simulazione;aeromobile;aereo;idrovolante;aliante;elicottero;dirigibile;mongolfiera;paracadute;parapendio;deltaplano;astronave;razzo;space shuttle
-Keywords[nl]=simulatie;luchtvaartuig;vliegtuig;watervliegtuig;zweefvliegtuig;helikopter;luchtschip;luchtballon;valscherm;glijscherm;deltavlieger;ruimteschip;raket;ruimteveer
+Keywords[it]=aviazione;pilota;pilotaggio;simulazione;aeronautica;aeromobile;aereo;idrovolante;aliante;elicottero;dirigibile;mongolfiera;paracadute;parapendio;deltaplano;astronave;razzo;space shuttle
+Keywords[lt]=aviacija;pilotas;pilotavimas;simuliacija;aeronautika;orlaivis;lėktuvas;hidroplanas;sklandytuvas;straigtasparnis;dirižablis;oro balionas;parašiutas;parasparnis;deltaplanas;erdvėlaivis;raketa;space shuttle
+Keywords[nl]=luchtvaart;piloot;vliegen;simulatie;navigatie;luchtvaartuig;vliegtuig;watervliegtuig;zweefvliegtuig;helikopter;luchtschip;luchtballon;valscherm;glijscherm;deltavlieger;ruimteschip;raket;ruimteveer
 Keywords[pt]=simulação;aeronave;avião;helicóptero;dirigível;balão;paraquedas;parapente;asa-delta;espaçonave;foguete;vaivém espacial
 Keywords[pt_BR]=simulação;aeronave;avião;helicóptero;dirigível;balão;paraquedas;parapente;asa-delta;espaçonave;foguete;ônibus espacial
-Keywords[ro]=simulator;aeronavă;avion;aeroplan;hidroavion;elicopter;dirijabil;balon;parașută;parapantă;planor;deltaplan;navă spațială;rachetă;naveta spațială
+Keywords[ro]=aviație;pilot;pilotaj;simulator;aeronautică;aeronavă;avion;aeroplan;hidroavion;elicopter;dirijabil;balon;parașută;parapantă;planor;deltaplan;navă;spațială;rachetă;naveta spațială
+Keywords[zh]=航空;飞行员;飞机驾驶;模拟;航空学;飞行器;飞机;水上飞机;轻型滑翔机;滑翔机;直升飞机;飞艇;载人气球;降落伞;滑翔伞;悬挂式滑翔机;太空船;火箭;航天飞机
