Update (obsolete!) package/debian/rules to use the renamed desktop file
Just for consistency and cleanliness, following commit
4b48aca411450fa2eca56ef1ee46638ef77d62bc. The 'package/debian' directory
is going to be removed soon, anyway[1].

The 'RedHat' and 'openSUSE' directories in 'package' don't need such a
change, because they use their own desktop file (and they should also be
removed after the 2017.2.1 release).

[1] https://sourceforge.net/p/flightgear/flightgear/merge-requests/92/

--- a/package/debian/rules
+++ b/package/debian/rules
@@ -56,7 +56,7 @@ install: build
 	$(MAKE) install prefix=$(CURDIR)/debian/flightgear/usr
 	uudecode flightgear.png.uue
 	cp flightgear.png debian/flightgear/usr/share/icons/hicolor/48x48/apps
-	cp flightgear.desktop debian/flightgear/usr/share/applnk/Applications/Games
+	cp org.flightgear.FlightGear.desktop debian/flightgear/usr/share/applnk/Applications/Games
 
 # Build architecture-independent files here.
 binary-indep: build install
