org.flightgear.FlightGear.desktop: add Spanish and Catalan translations
Thanks to Catalanoic.

--- a/package/org.flightgear.FlightGear.desktop
+++ b/package/org.flightgear.FlightGear.desktop
@@ -2,7 +2,9 @@
 Version=1.1
 Name=FlightGear
 GenericName=Flight simulator
+GenericName[ca]=Simulador de vol
 GenericName[de]=Flugsimulator
+GenericName[es]=Simulador de vuelo
 GenericName[fr]=Simulateur de vol
 GenericName[it]=Simulatore di volo
 GenericName[lt]=Skrydžių simuliatorius
@@ -11,7 +13,9 @@ GenericName[pt]=Simulador de Voo
 GenericName[ro]=Simulator de zbor
 GenericName[zh]=模拟飞行
 Comment=Practice flight training (airplanes, helicopters...)
+Comment[ca]=Practiqueu l'entrenament de vol (avions, helicòpters...)
 Comment[de]=Fliegen üben (Flugzeuge, Helikopter...)
+Comment[es]=Practica el entrenamiento de vuelo (aviones, helicópteros...)
 Comment[fr]=S’entraîner au pilotage (avions, hélicoptères...)
 Comment[it]=Addestrati al volo (aerei, elicotteri...)
 Comment[lt]=Treniruokitės skrydžius (lėktuvais, sraigtasparniais...)
@@ -25,7 +29,9 @@ Terminal=false
 Type=Application
 Categories=Game;Simulation
 Keywords=aviation;pilot;piloting;simulation;aeronautics;aircraft;airplane;seaplane;sailplane;glider;helicopter;airship;gas balloon;parachute;paraglider;hang-glider;spacecraft;rocket;space shuttle
+Keywords[ca]=aviació;pilot;pilotatge;simulació;aeronàutica;aeronau;avió;hidroavió;planador;parapent;helicòpter;dirigible;globus;paracaigudes;paraglider;ala delta;nau espacial;coet;transbordador espacial
 Keywords[de]=Luftfahrt;Pilot;Fliegen;Simulation;Aeronautik;Luftfahrzeug;Flugzeug;Wasserflugzeug;Segelflugzeug;Gleiter;Helikopter;Luftschiff;Gasballon;Heißluftballon;Fallschirm;Gleitschirm;Hängegleiter;Raumfahrzeug;Rakete;Space Shuttle
+Keywords[es]=aviación;piloto;pilotaje;simulación;aeronáutica;aeronave;avión;hidroavión;planeador;parapente;helicóptero;dirigible;globo;paracaídas;paraglider;ala-delta;nave espacial;cohete;transbordador espacial
 Keywords[fr]=aviation;pilote;pilotage;simulation;aéronautique;aéronef;avion;hydravion;planeur;hélicoptère;ballon dirigeable;montgolfière;parachute;parapente;deltaplane;véhicule spatial;fusée;navette spatiale
 Keywords[it]=aviazione;pilota;pilotaggio;simulazione;aeronautica;aeromobile;aereo;idrovolante;aliante;elicottero;dirigibile;mongolfiera;paracadute;parapendio;deltaplano;astronave;razzo;space shuttle
 Keywords[lt]=aviacija;pilotas;pilotavimas;simuliacija;aeronautika;orlaivis;lėktuvas;hidroplanas;sklandytuvas;straigtasparnis;dirižablis;oro balionas;parašiutas;parasparnis;deltaplanas;erdvėlaivis;raketa;space shuttle
