Add CMake Linux install directives for the icons and the .desktop file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -527,7 +527,10 @@ else()
 endif(ENABLE_TESTS)
 
 add_subdirectory(src)
+add_subdirectory(icons)
 add_subdirectory(man)
+add_subdirectory(package)
+add_subdirectory(scripts)
 
 #-----------------------------------------------------------------------------
 ### uninstall target
